Prevent gap showed on the left side of opened modal

--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -6,6 +6,12 @@ body.modal-open {
 
 .modal {
   padding-right: 0 !important;
+  &.show {
+    padding: 0 !important;
+    .modal-dialog {
+      margin: .5rem !important;
+    }
+  }
   .modal-content .hint {
     padding-left: 1.5rem;
   }
